src/objects/Transfer_Cancellation_Reasons__c.object
<CustomObject>
    <description>Reason for Transfer/Cancellation of bookings</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <description>Event to be set to Status for the selected reason if the Event is cancelled</description>
        <inlineHelpText>Event to be set to Status for the selected reason</inlineHelpText>
        <label>Cancel Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled - BSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fees_To_Be_Applied__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If fees are to be applied = Client at fault (client no longer wants to do the course)
If fees are not to be applied means that BSC is at fault (i.e. BSC had to cancel the course)</inlineHelpText>
        <label>Fees To Be Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Needs attachment for this reason</description>
        <inlineHelpText>Needs attachment for this reason</inlineHelpText>
        <label>Need Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notes Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Event_Status__c</fullName>
        <description>Status For Event</description>
        <inlineHelpText>Status For Event</inlineHelpText>
        <label>Transfer Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Transferred - Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred - BSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Transfer &amp; Cancellation Reason</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Event_Status__c</columns>
        <columns>Fees_To_Be_Applied__c</columns>
        <columns>Need_Attachments__c</columns>
        <columns>Notes_Required__c</columns>
        <columns>Transfer_Event_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transfer &amp; Cancellation Reason</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer &amp; Cancellation Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>